--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,20 @@
-    # Logs
-    logs
-    *.log
-    npm-debug.log*
-    yarn-debug.log*
-    yarn-error.log*
-    pnpm-debug.log*
-    lerna-debug.log*
+# Dependencies
+node_modules/
 
-    # Dependencies
-    node_modules/
+# Next.js build output
+.next/
+out/
+dist/
 
-    # Next.js build output
-    .next/
-    out/
+# Logs
+*.log
+npm-debug.log*
 
-    # Production build directory (if different from .next)
-    dist/
+# System and editor cruft
+.DS_Store
+.vscode/
+.idea/
 
-    # Editor directories and files
-    .vscode/
-    .idea/
-    .DS_Store
-    *.suo
-    *.ntvs*
-    *.njsproj
-    *.sln
-    *.sw?
-
-    # Environment variables
-    .env
-    .env.local
-    .env.*.local
-
-    # Local development and testing
-    .nyc_output/
-    coverage/
-    .cache/
-
-    # Other common ignores
-    temp/
-    *.tmp
-    *.bak
-    *.swo
-    *.swp
-node_modules
+# Environment files
+.env
+.env.*
